# Talon

./: .gitignore  README.md  pyproject.toml
docs/: README.md  _navbar.md  index.html  refresh.md  reusable_mappings.md  reuse.md  sideload.md
src/talon/: __init__.py  talon.py
src/talon/tools/: __init__.py  curate.py  extractharmony.py  mdload.py  refresh.py  sideload.py
